--- a/VotingPCNew/MainWindow.xaml
+++ b/VotingPCNew/MainWindow.xaml
@@ -3,9 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:VotingPCNew"
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:slides="clr-namespace:VotingPCNew.Slides"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         Background="{DynamicResource MaterialDesignPaper}"
         TextElement.FontWeight="Medium"
@@ -21,10 +21,10 @@
     <materialDesign:DialogHost x:Name="dialogHost" IsTabStop="False" FocusVisualStyle="{x:Null}" Focusable="False">
         <materialDesign:Transitioner x:Name="transitionerObj" SelectedIndex="0" Focusable="False">
             <materialDesign:TransitionerSlide>
-                <local:Slide1 x:Name="slide1"/>
+                <slides:IntroSlide x:Name="slide1"/>
             </materialDesign:TransitionerSlide>
             <materialDesign:TransitionerSlide>
-                <local:Slide2 x:Name="slide2"/>
+                <slides:Slide2 x:Name="slide2"/>
             </materialDesign:TransitionerSlide>
         </materialDesign:Transitioner>
     </materialDesign:DialogHost>
