--- a/VotingPCNew/slides/IntroSlide.xaml
+++ b/VotingPCNew/slides/IntroSlide.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="VotingPCNew.Slide1"
+﻿<UserControl x:Class="VotingPCNew.Slides.IntroSlide"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
