--- a/VotingPCNew/slides/VoteSlide.xaml
+++ b/VotingPCNew/slides/VoteSlide.xaml
@@ -5,7 +5,6 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:controls="clr-namespace:MaterialDesignExtensions.Controls;assembly=MaterialDesignExtensions"
-    xmlns:model="clr-namespace:MaterialDesignExtensions.Model;assembly=MaterialDesignExtensions"
     xmlns:localControls="clr-namespace:VotingPCNew.Controls"
     mc:Ignorable="d" FocusVisualStyle="{x:Null}"
     Focusable="False" Background="#FFFFEF81"
@@ -17,7 +16,8 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Border BorderBrush="{DynamicResource MaterialDesignDarkSeparatorBackground}" BorderThickness="1">
+        <Border Grid.Row="0" BorderThickness="1"
+            BorderBrush="{DynamicResource MaterialDesignDarkSeparatorBackground}">
             <TextBlock Name="topTitle" x:FieldModifier="private" FontWeight="Bold"
                 FontSize="32" Margin="24" HorizontalAlignment="Center">
                 CỘNG HÒA XÃ HỘI CHỦ NGHĨA VIỆT NAM
@@ -34,30 +34,33 @@
             <!-- Left column -->
             <ScrollViewer HorizontalScrollBarVisibility="Disabled"
                 VerticalScrollBarVisibility="Auto" Focusable="False"
-                Grid.Column="0" x:Name="view" Margin="0 16 0 0">
+                Grid.Column="0" Margin="0 16 0 0">
                 <StackPanel Orientation="Vertical">
-                    <TextBlock Name="listLabel" Text="Các cấp bầu"
-                        Margin="72 0 0 0" FontSize="24" FontWeight="SemiBold" />
-                    <controls:SideNavigation x:Name="sideNav"
+                    <!-- TODO: Move text below to the config file -->
+                    <TextBlock Text="Các cấp bầu" Margin="72 0 0 0"
+                        FontSize="24" FontWeight="SemiBold" />
+                    <controls:SideNavigation x:Name="sideNav" x:FieldModifier="private"
                         NavigationItemSelected="NavigationItem_SelectionChanged"
                         Style="{DynamicResource MaterialSideNavigationDefault}" />
-                    <Button Margin="20 10" Click="Button_Click">Hoàn tất</Button>
+                    <!-- TODO: Move text below to the config file -->
+                    <Button Margin="20 10" Click="SubmitButton_Click">Hoàn tất</Button>
                 </StackPanel>
             </ScrollViewer>
 
             <!-- Middle column -->
-            <ScrollViewer VerticalScrollBarVisibility="Auto" Grid.Column="1"
-                HorizontalScrollBarVisibility="Disabled" Focusable="False"
+            <ScrollViewer  Grid.Column="1" Focusable="False"
+                HorizontalScrollBarVisibility="Disabled"
+                VerticalScrollBarVisibility="Auto"
                 VerticalAlignment="Top">
-                <materialDesign:Card x:Name="candidateCard" Margin="32 16 16 32" Focusable="False">
-                    <d:VirtualizingStackPanel Orientation="Vertical" 
-                        Margin="32">
-                        <localControls:RadioTextBox HorizontalAlignment="Center" Margin="0 12" x:Name="test1" Text="Nguyễn Văn A"/>
-                        <localControls:RadioTextBox HorizontalAlignment="Center" Margin="0 12" x:Name="test2" Text="Nguyễn Văn B"/>
-                        <localControls:RadioTextBox HorizontalAlignment="Center" Margin="0 12" x:Name="test3" Text="Nguyễn Văn C"/>
-                        <localControls:RadioTextBox HorizontalAlignment="Center" Margin="0 12" x:Name="test4" Text="Nguyễn Văn D"/>
-                        <localControls:RadioTextBox HorizontalAlignment="Center" Margin="0 12" x:Name="test5" Text="Nguyễn Văn E"/>
-                        <localControls:RadioTextBox HorizontalAlignment="Center" Margin="0 12" x:Name="test6" Text="Nguyễn Văn F"/>
+                <materialDesign:Card x:Name="candidateCard" x:FieldModifier="private" 
+                    Margin="32 16 16 32" Focusable="False">
+                    <d:VirtualizingStackPanel Orientation="Vertical" Margin="32">
+                        <localControls:RadioTextBox HorizontalAlignment="Center" Margin="0 12" Text="Nguyễn Văn A"/>
+                        <localControls:RadioTextBox HorizontalAlignment="Center" Margin="0 12" Text="Nguyễn Văn B"/>
+                        <localControls:RadioTextBox HorizontalAlignment="Center" Margin="0 12" Text="Nguyễn Văn C"/>
+                        <localControls:RadioTextBox HorizontalAlignment="Center" Margin="0 12" Text="Nguyễn Văn D"/>
+                        <localControls:RadioTextBox HorizontalAlignment="Center" Margin="0 12" Text="Nguyễn Văn E"/>
+                        <localControls:RadioTextBox HorizontalAlignment="Center" Margin="0 12" Text="Nguyễn Văn F"/>
                     </d:VirtualizingStackPanel>
                 </materialDesign:Card>
             </ScrollViewer>
@@ -73,7 +76,7 @@
                 <Separator Height="2" Margin="20"
                     Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}"
                     Background="{DynamicResource MaterialDesignDarkSeparatorBackground}" />
-                <TextBlock Name="maxVote" Text="Chọn tối đa 1 người"
+                <TextBlock x:Name="maxVote" Text="Chọn tối đa 1 người" x:FieldModifier="private"
                     FontSize="32" FontWeight="SemiBold"
                     TextAlignment="Center" Margin="0 16"/>
             </StackPanel>
