--- a/VotingPCNew/App.xaml
+++ b/VotingPCNew/App.xaml
@@ -1,33 +1,35 @@
-﻿<Application x:Class="VotingPCNew.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:local="clr-namespace:VotingPCNew"
-             StartupUri="MainWindow.xaml">
+﻿<Application x:Class="VotingPCNew.App" 
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
 
             <!--Material Design theme-->
             <ResourceDictionary.MergedDictionaries>
                 <materialDesign:BundledTheme BaseTheme="Light" PrimaryColor="DeepPurple" SecondaryColor="Lime" />
-                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MaterialDesignExtensions;component/Themes/Generic.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MaterialDesignExtensions;component/Themes/MaterialDesignLightTheme.xaml" />
+                <ResourceDictionary
+                    Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
+                <ResourceDictionary
+                    Source="pack://application:,,,/MaterialDesignExtensions;component/Themes/Generic.xaml" />
+                <ResourceDictionary
+                    Source="pack://application:,,,/MaterialDesignExtensions;component/Themes/MaterialDesignLightTheme.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
             <!--Change text fonts-->
             <Style TargetType="AccessText">
-                <Setter Property="FontFamily" Value="Quicksand"/>
+                <Setter Property="FontFamily" Value="Quicksand" />
             </Style>
             <Style TargetType="TextBlock">
-                <Setter Property="FontFamily" Value="Quicksand"/>
+                <Setter Property="FontFamily" Value="Quicksand" />
             </Style>
 
             <!--An attempt at removing the annoying tab stop shape-->
             <Style TargetType="materialDesign:Card">
-                <Setter Property="Focusable" Value="False"/>
-                <Setter Property="IsTabStop" Value="False"/>
-                <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+                <Setter Property="Focusable" Value="False" />
+                <Setter Property="IsTabStop" Value="False" />
+                <Setter Property="FocusVisualStyle" Value="{x:Null}" />
             </Style>
 
         </ResourceDictionary>
