--- a/VotingPCNew/slides/VoteSlide.xaml
+++ b/VotingPCNew/slides/VoteSlide.xaml
@@ -1,43 +1,44 @@
-﻿<UserControl x:Class="VotingPCNew.Slides.Slide2"
+﻿<UserControl x:Class="VotingPCNew.Slides.VoteSlide"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:controls="clr-namespace:MaterialDesignExtensions.Controls;assembly=MaterialDesignExtensions"
     xmlns:localControls="clr-namespace:VotingPCNew.Controls"
     mc:Ignorable="d" FocusVisualStyle="{x:Null}"
-    Focusable="False" Background="#FFFFEF81"
+    Focusable="False" Background="#FFFFEF81" 
     d:DesignHeight="720" d:DesignWidth="1280"
     DataContext="{Binding Mode=OneWay, RelativeSource={RelativeSource Self}}">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <Border Grid.Row="0" BorderThickness="1"
+        <Border BorderThickness="1" 
             BorderBrush="{DynamicResource MaterialDesignDarkSeparatorBackground}">
-            <TextBlock Name="topTitle" x:FieldModifier="private" FontWeight="Bold"
-                FontSize="32" Margin="24" HorizontalAlignment="Center">
+            <TextBlock x:Name="topTitle" x:FieldModifier="private"
+                FontWeight="Bold" FontSize="32" Margin="24"
+                HorizontalAlignment="Center">
                 CỘNG HÒA XÃ HỘI CHỦ NGHĨA VIỆT NAM
             </TextBlock>
         </Border>
 
         <Grid Grid.Row="1" Margin="0 16 0 0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="0.2*"/>
-                <ColumnDefinition Width="0.5*"/>
-                <ColumnDefinition Width="0.3*"/>
+                <ColumnDefinition Width="0.2*" />
+                <ColumnDefinition Width="0.5*" />
+                <ColumnDefinition Width="0.3*" />
             </Grid.ColumnDefinitions>
 
             <!-- Left column -->
-            <ScrollViewer HorizontalScrollBarVisibility="Disabled"
+            <ScrollViewer HorizontalScrollBarVisibility="Disabled" 
                 VerticalScrollBarVisibility="Auto" Focusable="False"
                 Grid.Column="0" Margin="0 16 0 0">
                 <StackPanel Orientation="Vertical">
                     <!-- TODO: Move text below to the config file -->
-                    <TextBlock Text="Các cấp bầu" Margin="72 0 0 0"
+                    <TextBlock Text="Các cấp bầu" Margin="72 0 0 0" 
                         FontSize="24" FontWeight="SemiBold" />
                     <controls:SideNavigation x:Name="sideNav" x:FieldModifier="private"
                         NavigationItemSelected="NavigationItem_SelectionChanged"
@@ -48,37 +49,33 @@
             </ScrollViewer>
 
             <!-- Middle column -->
-            <ScrollViewer  Grid.Column="1" Focusable="False"
+            <ScrollViewer Grid.Column="1" Focusable="False" VerticalAlignment="Top" 
                 HorizontalScrollBarVisibility="Disabled"
-                VerticalScrollBarVisibility="Auto"
-                VerticalAlignment="Top">
-                <materialDesign:Card x:Name="candidateCard" x:FieldModifier="private" 
+                VerticalScrollBarVisibility="Auto">
+                <materialDesign:Card x:Name="candidateCard" x:FieldModifier="private"
                     Margin="32 16 16 32" Focusable="False">
                     <d:VirtualizingStackPanel Orientation="Vertical" Margin="32">
-                        <localControls:RadioTextBox HorizontalAlignment="Center" Margin="0 12" Text="Nguyễn Văn A"/>
-                        <localControls:RadioTextBox HorizontalAlignment="Center" Margin="0 12" Text="Nguyễn Văn B"/>
-                        <localControls:RadioTextBox HorizontalAlignment="Center" Margin="0 12" Text="Nguyễn Văn C"/>
-                        <localControls:RadioTextBox HorizontalAlignment="Center" Margin="0 12" Text="Nguyễn Văn D"/>
-                        <localControls:RadioTextBox HorizontalAlignment="Center" Margin="0 12" Text="Nguyễn Văn E"/>
-                        <localControls:RadioTextBox HorizontalAlignment="Center" Margin="0 12" Text="Nguyễn Văn F"/>
+                        <localControls:RadioTextBox HorizontalAlignment="Center" Margin="0 12" Text="Nguyễn Văn A" />
+                        <localControls:RadioTextBox HorizontalAlignment="Center" Margin="0 12" Text="Nguyễn Văn B" />
+                        <localControls:RadioTextBox HorizontalAlignment="Center" Margin="0 12" Text="Nguyễn Văn C" />
+                        <localControls:RadioTextBox HorizontalAlignment="Center" Margin="0 12" Text="Nguyễn Văn D" />
+                        <localControls:RadioTextBox HorizontalAlignment="Center" Margin="0 12" Text="Nguyễn Văn E" />
+                        <localControls:RadioTextBox HorizontalAlignment="Center" Margin="0 12" Text="Nguyễn Văn F" />
                     </d:VirtualizingStackPanel>
                 </materialDesign:Card>
             </ScrollViewer>
 
             <!-- Right column -->
             <StackPanel Grid.Column="2" Margin="16" VerticalAlignment="Center">
-                <TextBlock Name="title" Text="Cấp Thử nghiệm"
-                    FontSize="42" FontWeight="Bold" TextWrapping="Wrap"
-                    TextAlignment="Center" />
-                <TextBlock Name="subtitle" Text="Năm nhiệm kỳ 3000M"
-                    FontSize="26" FontWeight="Medium" Margin="0 16"
-                    TextAlignment="Center" />
-                <Separator Height="2" Margin="20"
+                <TextBlock x:Name="title" Text="Cấp Thử nghiệm" TextWrapping="Wrap"
+                    FontSize="42" FontWeight="Bold" TextAlignment="Center" />
+                <TextBlock x:Name="subtitle" Text="Năm nhiệm kỳ 3000M" TextAlignment="Center" 
+                    FontSize="26" FontWeight="Medium" Margin="0 16" />
+                <Separator Height="2" Margin="20" 
                     Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}"
                     Background="{DynamicResource MaterialDesignDarkSeparatorBackground}" />
                 <TextBlock x:Name="maxVote" Text="Chọn tối đa 1 người" x:FieldModifier="private"
-                    FontSize="32" FontWeight="SemiBold"
-                    TextAlignment="Center" Margin="0 16"/>
+                    FontSize="32" FontWeight="SemiBold" TextAlignment="Center" Margin="0 16" />
             </StackPanel>
         </Grid>
     </Grid>
