--- a/VotingPC/Controls/RadioTextBox.xaml
+++ b/VotingPC/Controls/RadioTextBox.xaml
@@ -1,9 +1,8 @@
-<UserControl x:Class="VotingPCNew.Controls.RadioTextBox"
+<UserControl x:Class="VotingPC.Controls.RadioTextBox"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-    xmlns:local="clr-namespace:VotingPCNew.Controls" 
     mc:Ignorable="d"
     d:Background="White"
     DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}">
