--- a/VotingPC/Slides/VoteSlide.xaml
+++ b/VotingPC/Slides/VoteSlide.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="VotingPCNew.Slides.VoteSlide"
+﻿<UserControl x:Class="VotingPC.Slides.VoteSlide"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:controls="clr-namespace:MaterialDesignExtensions.Controls;assembly=MaterialDesignExtensions"
-    xmlns:localControls="clr-namespace:VotingPCNew.Controls"
+    xmlns:localControls="clr-namespace:VotingPC.Controls"
     mc:Ignorable="d" FocusVisualStyle="{x:Null}"
     Focusable="False" Background="#FFFFEF81" 
     d:DesignHeight="720" d:DesignWidth="1280"
